overflow-content fix on Edge

--- a/dev/base/_normalize.scss
+++ b/dev/base/_normalize.scss
@@ -31,7 +31,7 @@ body {
 }
 
 .content {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 *, *:before, *:after {
