--- a/distrib/css/main.css
+++ b/distrib/css/main.css
@@ -19,7 +19,7 @@ body {
   margin: 0; }
 
 .content {
-  overflow-x: hidden; }
+  overflow: hidden; }
 
 *, *:before, *:after {
   -webkit-box-sizing: border-box;
